angular material added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
+$theme: mat.define-theme((
+  color: (
+    theme-type: light,
+    primary: mat.$azure-palette,
+    tertiary: mat.$blue-palette,
+  )
+));
+
+@include mat.core();
+@include mat.color-variants-backwards-compatibility($theme);
+
 :root {
+  @include mat.all-component-themes($theme);
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
